fix: horizontal line top of footer do not overlap when doc meta is empty
* fix: style

* fix: style

--- a/packages/template/src/styles/doc.scss
+++ b/packages/template/src/styles/doc.scss
@@ -8,8 +8,8 @@ $dg-interface-color: #7cb342;
 $dg-service-color: #8e24aa;
 
 .dg-doc-viewer {
-    display: block;
-
+    display: flex;
+    flex-direction: column;
     .dg-doc-header {
         display: flex;
         align-items: center;
@@ -57,9 +57,8 @@ $dg-service-color: #8e24aa;
 
     .dg-doc-viewer-inner {
         display: flex;
-        flex: auto;
+        flex: 0 0 auto;
         align-items: flex-start;
-        min-height: calc(100% - 60px);
     }
 
     .dg-doc-viewer-inner-content {
@@ -70,7 +69,6 @@ $dg-service-color: #8e24aa;
     .dg-component-viewer {
         display: block;
         width: 100%;
-        min-height: calc(100% - 60px);
 
         .dg-component-empty {
             display: block;
@@ -175,6 +173,9 @@ $dg-service-color: #8e24aa;
         .dg-toc {
             display: none;
         }
+    }
+    .dg-spring {
+        flex: 1 0 30px;
     }
 }
 
